--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*=======================================================
                         variables
 =======================================================*/
@@ -302,6 +303,7 @@ ul, ol {
     padding: 30px 15px 20px;
     -webkit-box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
             box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
   }
 }
 @media (min-width: 992px) {
@@ -318,14 +320,14 @@ ul, ol {
 }
 @media (min-width: 991px) {
   #header .navbar-nav .nav-item {
-    margin-left: 12px;
-    margin-right: 12px;
+    margin-left: 7px;
+    margin-right: 7px;
   }
 }
 @media (min-width: 1200px) {
   #header .navbar-nav .nav-item {
-    margin-left: 24px;
-    margin-right: 24px;
+    margin-left: 19px;
+    margin-right: 19px;
   }
 }
 @media (max-width: 991px) {
@@ -334,12 +336,40 @@ ul, ol {
     margin-bottom: 12px;
   }
 }
+#header .navbar-nav .dropdown {
+  position: relative;
+}
+#header .navbar-nav .dropdown::after {
+  position: absolute;
+  content: "🢓";
+  top: 0px;
+  font-size: 30px;
+}
+@media (max-width: 991px) {
+  #header .navbar-nav .dropdown::after {
+    left: 70px;
+  }
+}
+#header .navbar-nav .dropdown:hover .nav-link {
+  color: #00ABD1;
+}
+@media (min-width: 992px) {
+  #header .navbar-nav .dropdown:hover .nav-link {
+    border-bottom: 3px solid #00ABD1;
+  }
+}
 #header .navbar-nav .nav-link {
   font-family: 'Dubai', sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 21px;
   color: #272727;
+  cursor: pointer;
+}
+@media (min-width: 992px) {
+  #header .navbar-nav .nav-link {
+    padding: 28px 5px;
+  }
 }
 @media (min-width: 1200px) {
   #header .navbar-nav .nav-link {
@@ -347,6 +377,48 @@ ul, ol {
   }
 }
 #header .navbar-nav .nav-link:hover {
+  color: #00ABD1;
+}
+@media (min-width: 992px) {
+  #header .navbar-nav .nav-link:hover {
+    border-bottom: 3px solid #00ABD1;
+  }
+}
+#header .sub-menu {
+  display: none;
+  background-color: #ffffff;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 5px 20px 14px;
+}
+@media (min-width: 992px) {
+  #header .sub-menu {
+    position: absolute !important;
+    left: 0;
+    right: 0;
+    top: 56px;
+    -webkit-box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
+  }
+}
+#header .sub-menu .sub-menu-item {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+#header .sub-menu .sub-menu-link {
+  font-family: 'Dubai', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 21px;
+  color: #272727;
+}
+@media (min-width: 1200px) {
+  #header .sub-menu .sub-menu-link {
+    font-size: 18px;
+  }
+}
+#header .sub-menu .sub-menu-link:hover {
   color: #00ABD1;
 }
 #header .external-links-box {
