--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*=======================================================
                         variables
 =======================================================*/
@@ -341,7 +340,8 @@ ul, ol {
 }
 #header .navbar-nav .dropdown::after {
   position: absolute;
-  content: "🢓";
+  content: '';
+  background-image: url("../images/icon/arrow-down.png");
   top: 0px;
   font-size: 30px;
 }
@@ -349,6 +349,22 @@ ul, ol {
   #header .navbar-nav .dropdown::after {
     left: 70px;
   }
+}
+#header .navbar-nav .dropdown .nav-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (min-width: 992px) {
+  #header .navbar-nav .dropdown .nav-link {
+    padding: 34px 5px;
+  }
+}
+#header .navbar-nav .dropdown .nav-link img {
+  margin-left: 7px;
 }
 #header .navbar-nav .dropdown:hover .nav-link {
   color: #00ABD1;
@@ -358,6 +374,10 @@ ul, ol {
     border-bottom: 3px solid #00ABD1;
   }
 }
+#header .navbar-nav .dropdown:hover .nav-link img {
+  -webkit-filter: invert(48%) sepia(42%) saturate(2864%) hue-rotate(157deg) brightness(96%) contrast(101%);
+          filter: invert(48%) sepia(42%) saturate(2864%) hue-rotate(157deg) brightness(96%) contrast(101%);
+}
 #header .navbar-nav .nav-link {
   font-family: 'Dubai', sans-serif;
   font-size: 16px;
@@ -365,6 +385,7 @@ ul, ol {
   line-height: 21px;
   color: #272727;
   cursor: pointer;
+  border-bottom: 3px solid transparent;
 }
 @media (min-width: 992px) {
   #header .navbar-nav .nav-link {
@@ -390,14 +411,15 @@ ul, ol {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  padding: 5px 20px 14px;
+  padding: 10px 20px 14px;
 }
 @media (min-width: 992px) {
   #header .sub-menu {
     position: absolute !important;
     left: 0;
     right: 0;
-    top: 56px;
+    top: 92px;
+    border-radius: 3px;
     -webkit-box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
             box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
   }
@@ -668,6 +690,16 @@ ul, ol {
 }
 #post-detail .aside-link:hover {
   color: #00ABD1;
+}
+#post-detail .aside-link.active::before {
+  position: absolute;
+  content: "";
+  background-color: #00ABD1;
+  width: 200px;
+  height: 2px;
+  left: -205px;
+  /* right: 0; */
+  margin-top: 8px;
 }
 #post-detail .aside-link.active {
   color: #00ABD1;
