--- a/scss/main.scss
+++ b/scss/main.scss
@@ -229,11 +229,23 @@
             &::after{
                 position: absolute;
                 // content: "▼";
-                content: "🢓";
+                // content: "🢓";
+                content: '';
+                background-image: url("../images/icon/arrow-down.png");
                 top: 0px;
                 font-size: 30px;
                 @media (max-width: 991px) {
                     left: 70px;
+                }
+            }
+            .nav-link{
+                display: flex;
+                align-items: center;
+                @media (min-width: 992px) {
+                    padding: 34px 5px;
+                }
+                img{
+                    margin-left: 7px;
                 }
             }
             &:hover{
@@ -241,6 +253,9 @@
                     color: $primaryColor;
                     @media (min-width: 992px) {
                         border-bottom: 3px solid $primaryColor;
+                    }
+                    img{
+                        filter: invert(48%) sepia(42%) saturate(2864%) hue-rotate(157deg) brightness(96%) contrast(101%);
                     }
                 }
             }
@@ -252,6 +267,7 @@
             line-height: 21px;
             color: $colorBlack;
             cursor: pointer;
+            border-bottom: 3px solid transparent;
             @media (min-width: 992px) {
                 padding: 28px 5px;
             }
@@ -271,12 +287,13 @@
         display: none;
         background-color: $colorWhite;
         width: max-content;
-        padding: 5px 20px 14px;
+        padding: 10px 20px 14px;
         @media (min-width: 992px) {
             position: absolute !important;
             left: 0;
             right: 0;
-            top: 56px;
+            top: 92px;
+            border-radius: 3px;
             box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
         }
         .sub-menu-item{
@@ -531,6 +548,17 @@
         &:hover{
             color: $primaryColor;
         }
+    }
+
+    .aside-link.active::before {
+        position: absolute;
+        content: "";
+        background-color: $primaryColor;
+        width: 200px;
+        height: 2px;
+        left: -205px;
+        /* right: 0; */
+        margin-top: 8px;
     }
 
     .aside-link.active{
