--- a/scss/main.scss
+++ b/scss/main.scss
@@ -138,15 +138,10 @@
                         header
 =======================================================*/
 #header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: $colorWhite;
+    transition: .3s;
     width: 100%;
     height: 92px;
-    box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
-    z-index: 99999;
+    background-color: $colorWhite;
     .header-container{
         position: relative;
         width: 100%;
@@ -352,6 +347,17 @@
     }
 }
 
+.fixed_header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 92px;
+    box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
+    z-index: 99999;
+}
+
 
 /*===============================================
                     hero-banner
@@ -392,6 +398,32 @@
             line-height: 84px;
         }
     }
+    .hero-desc{
+        font-family: 'Dubai', sans-serif;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 27px;
+        letter-spacing: 0em;
+        text-align: center;
+        max-width: 671px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 51px;
+
+        @media (max-width: 991px) {
+            font-size: 15px;
+            line-height: 25px;
+        }
+    }
+}
+
+
+/*===============================================
+                genral-admin-topics
+===============================================*/
+#user-manual-topics{
+    margin-bottom: 300px;
 }
 
 
