--- a/css/main.css
+++ b/css/main.css
@@ -258,23 +258,16 @@ ul, ol {
 }
 @media (min-width: 992px) {
   #header .logo-box {
-    padding-top: 13px;
+    padding-top: 27px;
   }
 }
 @media (max-width: 991px) {
   #header .logo-box {
-    padding-top: 21px;
+    padding-top: 28px;
   }
 }
-@media (min-width: 992px) {
-  #header .brand-img {
-    max-width: 150px;
-  }
-}
-@media (max-width: 991px) {
-  #header .brand-img {
-    max-width: 125px;
-  }
+#header .brand-img {
+  max-width: 93px;
 }
 #header .navbar {
   margin-right: auto;
@@ -353,13 +346,10 @@ ul, ol {
       -ms-flex-align: center;
           align-items: center;
 }
-@media (min-width: 992px) {
-  #header .navbar-nav .dropdown .nav-link {
-    padding: 34px 5px;
-  }
-}
 #header .navbar-nav .dropdown .nav-link img {
   margin-left: 7px;
+  max-width: 10px;
+  margin-top: -2px;
 }
 #header .navbar-nav .dropdown:hover .nav-link {
   color: #00ABD1;
@@ -374,23 +364,18 @@ ul, ol {
           filter: invert(48%) sepia(42%) saturate(2864%) hue-rotate(157deg) brightness(96%) contrast(101%);
 }
 #header .navbar-nav .nav-link {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   font-family: 'Dubai', sans-serif;
-  font-size: 16px;
+  font-size: .75em;
   font-weight: 700;
   line-height: 21px;
   color: #272727;
   cursor: pointer;
   border-bottom: 3px solid transparent;
-}
-@media (min-width: 992px) {
-  #header .navbar-nav .nav-link {
-    padding: 28px 5px;
-  }
-}
-@media (min-width: 1200px) {
-  #header .navbar-nav .nav-link {
-    font-size: 18px;
-  }
+  text-transform: uppercase;
 }
 #header .navbar-nav .nav-link:hover {
   color: #00ABD1;
@@ -414,6 +399,7 @@ ul, ol {
     left: 0;
     right: 0;
     top: 92px;
+    top: 58px;
     border-radius: 3px;
     -webkit-box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
             box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
@@ -424,16 +410,16 @@ ul, ol {
   margin-bottom: 12px;
 }
 #header .sub-menu .sub-menu-link {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   font-family: 'Dubai', sans-serif;
-  font-size: 16px;
+  font-size: .75em;
   font-weight: 700;
   line-height: 21px;
   color: #272727;
-}
-@media (min-width: 1200px) {
-  #header .sub-menu .sub-menu-link {
-    font-size: 18px;
-  }
+  text-transform: uppercase;
 }
 #header .sub-menu .sub-menu-link:hover {
   color: #00ABD1;
@@ -449,6 +435,12 @@ ul, ol {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+#header .site-list .site-item {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 @media (min-width: 992px) {
   #header .site-list .site-item {
@@ -467,12 +459,12 @@ ul, ol {
 }
 @media (min-width: 992px) {
   #header .site-list .site-item .site-link img {
-    max-height: 24px;
+    max-height: 20px;
   }
 }
 @media (max-width: 991px) {
   #header .site-list .site-item .site-link img {
-    max-height: 20px;
+    max-height: 16px;
   }
 }
 @media (min-width: 992px) {
@@ -744,6 +736,16 @@ ul, ol {
 #post-detail .aside-subnav-link:hover {
   color: #00ABD1;
   text-decoration: underline;
+}
+#post-detail .aside-subnav-link.active::before {
+  position: absolute;
+  content: "";
+  background-color: #00ABD1;
+  width: 200px;
+  height: 2px;
+  left: -190px;
+  /* right: 0; */
+  margin-top: 8px;
 }
 #post-detail .aside-subnav-link.active {
   color: #00ABD1;
