--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ ul, ol {
   text-align: center;
   color: #00ABD1;
   margin-bottom: 24px;
+  text-transform: capitalize;
 }
 @media (max-width: 991px) {
   .section-header .section-title {
@@ -197,6 +198,7 @@ ul, ol {
   text-align: left;
   color: #272727;
   margin-bottom: 25px;
+  text-transform: capitalize;
 }
 @media (max-width: 991px) {
   .section-body .card .card-title {
@@ -326,18 +328,6 @@ ul, ol {
 #header .navbar-nav .dropdown {
   position: relative;
 }
-#header .navbar-nav .dropdown::after {
-  position: absolute;
-  content: '';
-  background-image: url("../images/icon/arrow-down.png");
-  top: 0px;
-  font-size: 30px;
-}
-@media (max-width: 991px) {
-  #header .navbar-nav .dropdown::after {
-    left: 70px;
-  }
-}
 #header .navbar-nav .dropdown .nav-link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -348,7 +338,7 @@ ul, ol {
 }
 #header .navbar-nav .dropdown .nav-link img {
   margin-left: 7px;
-  max-width: 10px;
+  max-width: 8px;
   margin-top: -2px;
 }
 #header .navbar-nav .dropdown:hover .nav-link {
@@ -454,6 +444,31 @@ ul, ol {
     margin-right: 6px;
   }
 }
+#header .site-list .site-item .book-class {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  font-family: 'Dubai', sans-serif;
+  font-size: .75em;
+  font-weight: 700;
+  line-height: 21px;
+  color: #272727;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #00ABD1;
+  border-radius: 30px;
+}
+@media (min-width: 992px) {
+  #header .site-list .site-item .book-class {
+    padding: 11px 36px 10px;
+  }
+}
+@media (max-width: 991px) {
+  #header .site-list .site-item .book-class {
+    padding: 8px 26px 7px;
+  }
+}
 #header .site-list .site-item .site-link img {
   height: 100%;
 }
@@ -498,7 +513,7 @@ ul, ol {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 180px;
+  margin-top: 111px;
 }
 #hero-banner .hero-title {
   max-width: 468px;
@@ -698,10 +713,6 @@ ul, ol {
   color: #272727;
   margin-bottom: 15px;
   display: inline-block;
-  white-space: nowrap;
-  overflow: hidden !important;
-  text-overflow: ellipsis;
-  max-width: 266px;
 }
 #post-detail .aside-link:hover {
   color: #00ABD1;
@@ -808,6 +819,80 @@ ul, ol {
   width: 100%;
   margin-bottom: 18px;
 }
+#post-detail .section-list {
+  list-style: disc;
+  margin-left: 24px;
+  margin-bottom: 24px;
+}
+#post-detail .section-item {
+  font-family: 'Dubai', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: left;
+}
+
+/*===============================================
+                    live-chat
+===============================================*/
+#live-chat {
+  background: linear-gradient(89.95deg, #06A7E0 0.55%, #BED62F 99.96%);
+  padding-top: 92px;
+  padding-bottom: 4px;
+}
+#live-chat .live-chat-title {
+  font-family: 'Dubai', sans-serif;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
+  color: #ffffff;
+  max-width: 843px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 38px;
+}
+@media (max-width: 991px) {
+  #live-chat .live-chat-title {
+    font-size: 30px;
+    line-height: 36px;
+  }
+}
+@media (max-width: 767px) {
+  #live-chat .live-chat-title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
+#live-chat .btn-live-chat {
+  display: block;
+  color: #ffffff;
+  background: #00ABD1;
+  font-family: 'Dubai', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+  text-align: center;
+  border: none;
+  border-radius: 30px;
+  padding: 15px 41px 14px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (max-width: 991px) {
+  #live-chat .btn-live-chat {
+    font-size: 16px;
+    line-height: 18px;
+    padding: 15px 35px 14px;
+  }
+}
+@media (max-width: 767px) {
+  #live-chat .btn-live-chat {
+    font-size: 14px;
+    line-height: 14px;
+    padding: 15px 29px 14px;
+  }
+}
 
 /*===============================================
                     footer
@@ -817,11 +902,10 @@ ul, ol {
   z-index: 9999;
   padding-top: 65px;
   background: linear-gradient(89.95deg, #06A7E0 0.55%, #BED62F 99.96%);
-  margin-top: 1px;
 }
 #footer .container {
   border-bottom: 1px solid #ffffff;
-  padding-bottom: 75px;
+  padding-bottom: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
