--- a/css/main.css
+++ b/css/main.css
@@ -878,6 +878,7 @@ ul, ol {
   padding: 15px 41px 14px;
   margin-left: auto;
   margin-right: auto;
+  cursor: pointer;
 }
 @media (max-width: 991px) {
   #live-chat .btn-live-chat {
