--- a/scss/main.scss
+++ b/scss/main.scss
@@ -794,6 +794,7 @@
         padding: 15px 41px 14px;
         margin-left: auto;
         margin-right: auto;
+        cursor: pointer;
         @media (max-width: 991px) {
             font-size: 16px;
             line-height: 18px;
