--- a/css/main.css
+++ b/css/main.css
@@ -344,11 +344,6 @@ ul, ol {
 #header .navbar-nav .dropdown:hover .nav-link {
   color: #00ABD1;
 }
-@media (min-width: 992px) {
-  #header .navbar-nav .dropdown:hover .nav-link {
-    border-bottom: 3px solid #00ABD1;
-  }
-}
 #header .navbar-nav .dropdown:hover .nav-link img {
   -webkit-filter: invert(48%) sepia(42%) saturate(2864%) hue-rotate(157deg) brightness(96%) contrast(101%);
           filter: invert(48%) sepia(42%) saturate(2864%) hue-rotate(157deg) brightness(96%) contrast(101%);
@@ -359,13 +354,17 @@ ul, ol {
       -ms-user-select: none;
           user-select: none;
   font-family: 'Dubai', sans-serif;
-  font-size: .75em;
+  font-size: 16px;
   font-weight: 700;
   line-height: 21px;
   color: #272727;
   cursor: pointer;
   border-bottom: 3px solid transparent;
-  text-transform: uppercase;
+}
+@media (min-width: 1200px) {
+  #header .navbar-nav .nav-link {
+    font-size: 18px;
+  }
 }
 #header .navbar-nav .nav-link:hover {
   color: #00ABD1;
@@ -390,7 +389,7 @@ ul, ol {
     right: 0;
     top: 92px;
     top: 58px;
-    border-radius: 3px;
+    border-radius: 0 0 3px 3px;
     -webkit-box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
             box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
   }
@@ -405,11 +404,15 @@ ul, ol {
       -ms-user-select: none;
           user-select: none;
   font-family: 'Dubai', sans-serif;
-  font-size: .75em;
+  font-size: 16px;
   font-weight: 700;
   line-height: 21px;
   color: #272727;
-  text-transform: uppercase;
+}
+@media (min-width: 1200px) {
+  #header .sub-menu .sub-menu-link {
+    font-size: 18px;
+  }
 }
 #header .sub-menu .sub-menu-link:hover {
   color: #00ABD1;
@@ -513,10 +516,17 @@ ul, ol {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 111px;
+  margin-top: 70px;
+}
+@media (max-width: 767px) {
+  #hero-banner .hero-content-box {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
 }
 #hero-banner .hero-title {
-  max-width: 468px;
   font-family: 'Dubai', sans-serif;
   font-weight: 700;
   text-align: left;
@@ -528,6 +538,7 @@ ul, ol {
   #hero-banner .hero-title {
     font-size: 42px;
     line-height: 54px;
+    max-width: 468px;
   }
 }
 @media (min-width: 992px) {
@@ -866,6 +877,9 @@ ul, ol {
 }
 #live-chat .btn-live-chat {
   display: block;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
   color: #ffffff;
   background: #00ABD1;
   font-family: 'Dubai', sans-serif;
@@ -879,6 +893,9 @@ ul, ol {
   margin-left: auto;
   margin-right: auto;
   cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 @media (max-width: 991px) {
   #live-chat .btn-live-chat {
