--- a/scss/main.scss
+++ b/scss/main.scss
@@ -251,9 +251,9 @@
             &:hover{
                 .nav-link{
                     color: $primaryColor;
-                    @media (min-width: 992px) {
-                        border-bottom: 3px solid $primaryColor;
-                    }
+                    // @media (min-width: 992px) {
+                    //     border-bottom: 3px solid $primaryColor;
+                    // }
                     img{
                         filter: invert(48%) sepia(42%) saturate(2864%) hue-rotate(157deg) brightness(96%) contrast(101%);
                     }
@@ -263,20 +263,21 @@
         .nav-link{
             user-select: none;
             font-family: 'Dubai', sans-serif;
-            // font-size: 16px;
-            font-size: .75em;
+            font-size: 16px;
+            // font-size: .75em;
+            // font-size: .9em;
             font-weight: 700;
             line-height: 21px;
             color: $colorBlack;
             cursor: pointer;
             border-bottom: 3px solid transparent;
-            text-transform: uppercase;
+            // text-transform: uppercase;
             // @media (min-width: 992px) {
             //     padding: 28px 5px;
             // }
-            // @media (min-width: 1200px) {
-            //     font-size: 18px;
-            // }
+            @media (min-width: 1200px) {
+                font-size: 18px;
+            }
             &:hover{
                 color: $primaryColor;
                 @media (min-width: 992px) {
@@ -297,7 +298,7 @@
             right: 0;
             top: 92px;
             top: 58px;
-            border-radius: 3px;
+            border-radius: 0 0 3px 3px;
             box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
         }
         .sub-menu-item{
@@ -307,15 +308,16 @@
         .sub-menu-link{
             user-select: none;
             font-family: 'Dubai', sans-serif;
-            // font-size: 16px;
-            font-size: .75em;
+            font-size: 16px;
+            // font-size: .75em;
+            // font-size: .9em;
             font-weight: 700;
             line-height: 21px;
             color: $colorBlack;
-            text-transform: uppercase;
-            // @media (min-width: 1200px) {
-            //     font-size: 18px;
-            // }
+            // text-transform: uppercase;
+            @media (min-width: 1200px) {
+                font-size: 18px;
+            }
             &:hover{
                 color: $primaryColor;
             }
@@ -401,10 +403,12 @@
     .hero-content-box{
         display: flex;
         align-items: center;
-        margin-top: 111px;
+        margin-top: 70px;
+        @media (max-width: 767px) {
+            flex-direction: column-reverse;
+        }
     }
     .hero-title{
-        max-width: 468px;
         font-family: 'Dubai', sans-serif;
         font-weight: 700;
         text-align: left;
@@ -415,6 +419,7 @@
         @media (min-width: 768px) {
             font-size: 42px;
             line-height: 54px;
+            max-width: 468px;
         }
     
         @media (min-width: 992px) {
@@ -782,6 +787,7 @@
     }
     .btn-live-chat{
         display: block;
+        max-width: max-content;
         color: $colorWhite;
         background: $primaryColor;
         font-family: 'Dubai', sans-serif;
@@ -795,6 +801,9 @@
         margin-left: auto;
         margin-right: auto;
         cursor: pointer;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
         @media (max-width: 991px) {
             font-size: 16px;
             line-height: 18px;
