--- a/scss/main.scss
+++ b/scss/main.scss
@@ -838,12 +838,17 @@
         flex-wrap: wrap;
 
         .info {
-            width: 395px;
+            // width: 395px;
+            width: 365px;
             margin-right: 35px;
             margin-bottom: 2.5rem;
 
-            @media screen and (max-width: 500px) {
+            @media screen and (max-width: 600px) {
+                width: 100%;
                 margin-right: 0;
+                img{
+                    margin: auto;
+                }
             }
 
             img {
@@ -865,8 +870,10 @@
         }
 
         .links {
-            width: 140px;
-            margin-right: 108px;
+            // width: 140px;
+            // margin-right: 108px;
+            width: 170px;
+            margin-right: 80px;
             color: $colorWhite;
             margin-bottom: 2.5rem;
 
