--- a/css/main.css
+++ b/css/main.css
@@ -844,72 +844,60 @@ ul, ol {
 }
 
 /*===============================================
-                    live-chat
+            social-media-link
 ===============================================*/
-#live-chat {
-  background: linear-gradient(89.95deg, #06A7E0 0.55%, #BED62F 99.96%);
-  padding-top: 92px;
-  padding-bottom: 4px;
+#social-media-link .social-media-link-inner-box {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 23px;
+          column-gap: 23px;
+  row-gap: 23px;
+  margin-bottom: 103px;
 }
-#live-chat .live-chat-title {
-  font-family: 'Dubai', sans-serif;
-  font-size: 36px;
-  font-weight: 500;
-  line-height: 42px;
+#social-media-link .social-media-link-inner-box .contact-info-card {
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 22px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 11px;
+  padding: 37px 50px 44px;
+}
+#social-media-link .social-media-link-inner-box .contact-info-card p {
   text-align: center;
-  color: #ffffff;
-  max-width: 843px;
+  color: #272727;
+}
+#social-media-link .social-media-link-inner-box .contact-info-card svg {
+  display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 38px;
 }
-@media (max-width: 991px) {
-  #live-chat .live-chat-title {
-    font-size: 30px;
-    line-height: 36px;
-  }
+#social-media-link .social-media-link-inner-box .contact-info-card:hover {
+  background: linear-gradient(159.67deg, rgba(0, 165, 225, 0.85) 1.55%, rgba(190, 214, 47, 0.85) 106.93%);
 }
-@media (max-width: 767px) {
-  #live-chat .live-chat-title {
-    font-size: 24px;
-    line-height: 30px;
-  }
-}
-#live-chat .btn-live-chat {
-  display: block;
-  max-width: -webkit-max-content;
-  max-width: -moz-max-content;
-  max-width: max-content;
+#social-media-link .social-media-link-inner-box .contact-info-card:hover p {
   color: #ffffff;
-  background: #00ABD1;
+}
+#social-media-link .social-media-link-inner-box .contact-info-card:hover svg, #social-media-link .social-media-link-inner-box .contact-info-card:hover path {
+  fill: #ffffff;
+}
+#social-media-link .social-media-link-inner-box .contact-info-card svg, #social-media-link .social-media-link-inner-box .contact-info-card img {
+  margin-bottom: 28px;
+}
+#social-media-link .contact-info-card-title {
   font-family: 'Dubai', sans-serif;
   font-size: 18px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 22px;
-  text-align: center;
-  border: none;
-  border-radius: 30px;
-  padding: 15px 41px 14px;
-  margin-left: auto;
-  margin-right: auto;
-  cursor: pointer;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+  margin-bottom: 24px;
+  text-transform: uppercase;
 }
-@media (max-width: 991px) {
-  #live-chat .btn-live-chat {
-    font-size: 16px;
-    line-height: 18px;
-    padding: 15px 35px 14px;
-  }
-}
-@media (max-width: 767px) {
-  #live-chat .btn-live-chat {
-    font-size: 14px;
-    line-height: 14px;
-    padding: 15px 29px 14px;
-  }
+#social-media-link .contact-info-card-social-address-desc {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
 }
 
 /*===============================================
