--- a/scss/main.scss
+++ b/scss/main.scss
@@ -547,7 +547,7 @@
 
     .aside-outer-box{
         position: fixed;
-        background-color: $colorWhite;
+        // background-color: $colorWhite;
         padding-right: 10px;
     }
 
