--- a/scss/main.scss
+++ b/scss/main.scss
@@ -741,12 +741,23 @@
         // }
     }
 
+    .subsection-desc-list{
+        list-style: none;
+        margin-bottom: 24px;
+    }
+    .subsection-desc-item{
+        font-family: 'Dubai', sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 28px;
+        text-align: left;
+    }
+
     .section-list{
         list-style: disc;
         margin-left: 24px;
         margin-bottom: 24px;
     }
-
     .section-item{
         font-family: 'Dubai', sans-serif;
         font-size: 16px;
