--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,8 @@ ul, ol {
 .section-body .card .card-img {
   width: 100%;
   border-radius: 11px;
+  min-height: 181px;
+  max-height: 181px;
 }
 .section-body .card .card-title {
   font-family: 'Dubai', sans-serif;
@@ -580,23 +582,16 @@ ul, ol {
 }
 
 /*===============================================
-                genral-admin-topics
+            Frontend User Guides
 ===============================================*/
 #user-manual-topics {
   margin-bottom: 153px;
 }
 
 /*===============================================
-                genral-admin-topics
+            Facility Admin User Guide
 ===============================================*/
-#genral-admin-topics {
-  margin-bottom: 300px;
-}
-
-/*===============================================
-                hq-admin-guide
-===============================================*/
-#hq-admin-guide {
+#facility-admin-topics {
   margin-bottom: 300px;
 }
 
