--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,7 +22,7 @@
 =======================================================*/
 .container {
     width: 100%;
-    max-width: 1114px;
+    max-width: 1214px;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -80,7 +80,7 @@
 .section-body{
     .card-box{
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
         column-gap: 32px;
         row-gap: 75px;
         @media (max-width: 991px) {
@@ -607,16 +607,16 @@
         }
     }
 
-    .aside-link.active::before {
-        position: absolute;
-        content: "";
-        background-color: $primaryColor;
-        width: 200px;
-        height: 2px;
-        left: -205px;
-        /* right: 0; */
-        margin-top: 8px;
-    }
+    // .aside-link.active::before {
+    //     position: absolute;
+    //     content: "";
+    //     background-color: $primaryColor;
+    //     width: 200px;
+    //     height: 2px;
+    //     left: -205px;
+    //     /* right: 0; */
+    //     margin-top: 8px;
+    // }
 
     .aside-link.active{
         color: $primaryColor;
@@ -641,16 +641,16 @@
         }
     }
 
-    .aside-subnav-link.active::before {
-        position: absolute;
-        content: "";
-        background-color: $primaryColor;
-        width: 200px;
-        height: 2px;
-        left: -190px;
-        /* right: 0; */
-        margin-top: 8px;
-    }
+    // .aside-subnav-link.active::before {
+    //     position: absolute;
+    //     content: "";
+    //     background-color: $primaryColor;
+    //     width: 200px;
+    //     height: 2px;
+    //     left: -190px;
+    //     /* right: 0; */
+    //     margin-top: 8px;
+    // }
 
     .aside-subnav-link.active{
         color: $primaryColor;
