--- a/css/main.css
+++ b/css/main.css
@@ -827,6 +827,27 @@ ul, ol {
   line-height: 28px;
   text-align: left;
 }
+#post-detail .dashboard-overview-list {
+  list-style: none;
+  margin-left: 24px;
+  margin-bottom: 24px;
+}
+#post-detail .dashboard-overview-item {
+  font-family: 'Dubai', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: left;
+}
+#post-detail .dashboard-overview-item::before {
+  content: counter(li);
+  counter-increment: li;
+  color: #ff9d0b;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
 
 /*===============================================
             social-media-link
